--- a/chernobyl.ipynb
+++ b/chernobyl.ipynb
@@ -155,6 +155,7 @@
     }
    ],
    "source": [
+    "# Read Kaggle csv\n",
     "chernobyl_df = pd.read_csv(chernobyl, encoding=\"ISO-8859-1\")\n",
     "chernobyl_df.head()"
    ]
@@ -188,7 +189,7 @@
        "      <th>Country</th>\n",
        "      <th>Country Code</th>\n",
        "      <th>Locality Name</th>\n",
-       "      <th>Latiitude</th>\n",
+       "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Date</th>\n",
        "      <th>End of sampling</th>\n",
@@ -274,12 +275,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Country  Country Code Locality Name  Latiitude  Longitude      Date  \\\n",
-       "0      SE             1         RISOE      12.07       55.7  86/04/27   \n",
-       "1      SE             1         RISOE      12.07       55.7  86/04/28   \n",
-       "2      SE             1         RISOE      12.07       55.7  86/04/29   \n",
-       "3      SE             1         RISOE      12.07       55.7  86/04/29   \n",
-       "4      SE             1         RISOE      12.07       55.7  86/04/30   \n",
+       "  Country  Country Code Locality Name  Latitude  Longitude      Date  \\\n",
+       "0      SE             1         RISOE     12.07       55.7  86/04/27   \n",
+       "1      SE             1         RISOE     12.07       55.7  86/04/28   \n",
+       "2      SE             1         RISOE     12.07       55.7  86/04/29   \n",
+       "3      SE             1         RISOE     12.07       55.7  86/04/29   \n",
+       "4      SE             1         RISOE     12.07       55.7  86/04/30   \n",
        "\n",
        "  End of sampling  Duration(h.min) Iodine-131 (I-131) Concentration (Bq/m3)  \\\n",
        "0        24:00:00             24.0                                        1   \n",
@@ -314,7 +315,7 @@
     "    \"PAYS\":\"Country\", \n",
     "    \"Code\":\"Country Code\", \n",
     "    \"Ville\":\"Locality Name\",\n",
-    "    \"X\":\"Latiitude\", \n",
+    "    \"X\":\"Latitude\", \n",
     "    \"Y\":\"Longitude\" , \n",
     "    \"I 131 (Bq/m3)\" : \"Iodine-131 (I-131) Concentration (Bq/m3)\" , \n",
     "    \"Cs 134 (Bq/m3)\" : \"Caesium-134 (Cs-134) Concentration (Bq/m3)\" , \n",
@@ -333,7 +334,7 @@
        "Country                                                     2051\n",
        "Country Code                                                2051\n",
        "Locality Name                                               2051\n",
-       "Latiitude                                                   2051\n",
+       "Latitude                                                    2051\n",
        "Longitude                                                   2051\n",
        "Date                                                        2051\n",
        "End of sampling                                             2051\n",
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +421,7 @@
        "      <th>Country</th>\n",
        "      <th>Country Code</th>\n",
        "      <th>Locality Name</th>\n",
-       "      <th>Latiitude</th>\n",
+       "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Date</th>\n",
        "      <th>End of sampling</th>\n",
@@ -591,18 +592,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      Country  Country Code Locality Name  Latiitude  Longitude      Date  \\\n",
-       "0      Sweden             1         RISOE      12.07       55.7  86/04/27   \n",
-       "1      Sweden             1         RISOE      12.07       55.7  86/04/28   \n",
-       "2      Sweden             1         RISOE      12.07       55.7  86/04/29   \n",
-       "3      Sweden             1         RISOE      12.07       55.7  86/04/29   \n",
-       "4      Sweden             1         RISOE      12.07       55.7  86/04/30   \n",
-       "...       ...           ...           ...        ...        ...       ...   \n",
-       "2046  Hungary            24      BUDAPEST      19.10       47.5  86/05/07   \n",
-       "2047  Hungary            24      BUDAPEST      19.10       47.5  86/05/08   \n",
-       "2048  Hungary            24      BUDAPEST      19.10       47.5  86/05/09   \n",
-       "2049  Hungary            24      BUDAPEST      19.10       47.5  86/05/10   \n",
-       "2050  Hungary            24      BUDAPEST      19.10       47.5  86/05/11   \n",
+       "      Country  Country Code Locality Name  Latitude  Longitude      Date  \\\n",
+       "0      Sweden             1         RISOE     12.07       55.7  86/04/27   \n",
+       "1      Sweden             1         RISOE     12.07       55.7  86/04/28   \n",
+       "2      Sweden             1         RISOE     12.07       55.7  86/04/29   \n",
+       "3      Sweden             1         RISOE     12.07       55.7  86/04/29   \n",
+       "4      Sweden             1         RISOE     12.07       55.7  86/04/30   \n",
+       "...       ...           ...           ...       ...        ...       ...   \n",
+       "2046  Hungary            24      BUDAPEST     19.10       47.5  86/05/07   \n",
+       "2047  Hungary            24      BUDAPEST     19.10       47.5  86/05/08   \n",
+       "2048  Hungary            24      BUDAPEST     19.10       47.5  86/05/09   \n",
+       "2049  Hungary            24      BUDAPEST     19.10       47.5  86/05/10   \n",
+       "2050  Hungary            24      BUDAPEST     19.10       47.5  86/05/11   \n",
        "\n",
        "     End of sampling  Duration(h.min)  \\\n",
        "0           24:00:00             24.0   \n",
@@ -659,13 +660,13 @@
        "[2051 rows x 11 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Clean up Country column. Replace country abbreviation with country name.\n",
+    "# Replace country abbreviation with country name.\n",
     "chernobyl_renamed_df['Country'] = chernobyl_renamed_df['Country'].replace(\n",
     "    {'IT': 'Italy', \n",
     "     'F': 'France',\n",
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +716,7 @@
        "      <th>Country</th>\n",
        "      <th>Country Code</th>\n",
        "      <th>Locality Name</th>\n",
-       "      <th>Latiitude</th>\n",
+       "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Date</th>\n",
        "      <th>End of sampling</th>\n",
@@ -886,18 +887,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      Country  Country Code Locality Name  Latiitude  Longitude      Date  \\\n",
-       "0      Sweden             1         RISOE      12.07       55.7  86/04/27   \n",
-       "1      Sweden             1         RISOE      12.07       55.7  86/04/28   \n",
-       "2      Sweden             1         RISOE      12.07       55.7  86/04/29   \n",
-       "3      Sweden             1         RISOE      12.07       55.7  86/04/29   \n",
-       "4      Sweden             1         RISOE      12.07       55.7  86/04/30   \n",
-       "...       ...           ...           ...        ...        ...       ...   \n",
-       "2046  Hungary            24      BUDAPEST      19.10       47.5  86/05/07   \n",
-       "2047  Hungary            24      BUDAPEST      19.10       47.5  86/05/08   \n",
-       "2048  Hungary            24      BUDAPEST      19.10       47.5  86/05/09   \n",
-       "2049  Hungary            24      BUDAPEST      19.10       47.5  86/05/10   \n",
-       "2050  Hungary            24      BUDAPEST      19.10       47.5  86/05/11   \n",
+       "      Country  Country Code Locality Name  Latitude  Longitude      Date  \\\n",
+       "0      Sweden             1         RISOE     12.07       55.7  86/04/27   \n",
+       "1      Sweden             1         RISOE     12.07       55.7  86/04/28   \n",
+       "2      Sweden             1         RISOE     12.07       55.7  86/04/29   \n",
+       "3      Sweden             1         RISOE     12.07       55.7  86/04/29   \n",
+       "4      Sweden             1         RISOE     12.07       55.7  86/04/30   \n",
+       "...       ...           ...           ...       ...        ...       ...   \n",
+       "2046  Hungary            24      BUDAPEST     19.10       47.5  86/05/07   \n",
+       "2047  Hungary            24      BUDAPEST     19.10       47.5  86/05/08   \n",
+       "2048  Hungary            24      BUDAPEST     19.10       47.5  86/05/09   \n",
+       "2049  Hungary            24      BUDAPEST     19.10       47.5  86/05/10   \n",
+       "2050  Hungary            24      BUDAPEST     19.10       47.5  86/05/11   \n",
        "\n",
        "     End of sampling  Duration(h.min)  \\\n",
        "0           24:00:00             24.0   \n",
@@ -954,19 +955,20 @@
        "[1571 rows x 11 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Drop null rows\n",
     "chernobyl_drop_df = chernobyl_renamed_df.dropna(how='any')\n",
     "chernobyl_drop_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
